tests/invalid/mut_without_initializer.wio
fn Entry(args: string[]) -> i32 {
    mut value: i32;
    return 0;
}
